--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div id="first-screen">
             <img src="https://i.ibb.co/CQt5p7k/peach-cat-ngambek.png" alt="Beruang ngambek">
+
             <h1>pacalku masih ngambek?</h1>
             <div class="buttons">
                 <button id="yes-btn">masih</button>
@@ -20,7 +21,8 @@
         <div id="second-screen" style="display: none;">
             <div class="heart-animation"></div>
             <img src="https://i.ibb.co/v32WJ2g/peach-cat-love.png" alt="Beruang berpelukan">
-            <h1>hihi love u pacal!</h1>
+
+            <h1>hihi love u dedeekkk sayangg, jangann ngambekk2 lagii yaaa, nyikkk sayanggg dedeekk🤍!</h1>
         </div>
     </div>
     <script src="script.js"></script>
