--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div id="first-screen">
-            <img src="https://i.ibb.co/CQt5p7k/peach-cat-ngambek.png" alt="Beruang ngambek">
+            <img src="Beruang-Mochi-Peach-Cat-Ngambek.png" alt="Beruang ngambek">
             <h1>pacalku masih ngambek?</h1>
             <div class="buttons">
                 <button id="yes-btn">masih</button>
@@ -18,7 +18,7 @@
         </div>
         <div id="second-screen" style="display: none;">
             <div class="heart-animation"></div>
-            <img src="https://i.ibb.co/v32WJ2g/peach-cat-love.png" alt="Beruang berpelukan">
+            <img src="Beruang-Mochi-Peach-Cat-Berpelukan.png" alt="Beruang berpelukan">
 
             <h1>hihi love u dedeekkk sayangg, jangann ngambekk2 lagii yaaa, nyikkk sayanggg dedeekk!</h1>
         </div>
