--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div id="first-screen">
-            <img src="1a42ba4abc1145caac38e8e79e577d6.jpg" alt="Beruang ngambek">
+            <img src="beruangngambek.png" alt="Beruang ngambek">
             <h1>pacalku masih ngambek?</h1>
             <div class="buttons">
                 <button id="yes-btn">masih</button>
@@ -18,7 +18,7 @@
         </div>
         <div id="second-screen" style="display: none;">
             <div class="heart-animation"></div>
-            <img src="3435a73f69fbe0f11c36e1141320da5d.jpg" alt="Beruang berpelukan">
+            <img src="beruang-berpelukan.png" alt="Beruang berpelukan">
 
             <h1>hihi love u dedeekkk sayangg, jangann ngambekk2 lagii yaaa, nyikkk sayanggg dedeekk!</h1>
         </div>
