--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div id="second-screen" style="display: none;">
             <div class="heart-animation"></div>
-            <img src="beruang-berpelukan.png" alt="Beruang berpelukan">
+            <img src="beruangberpelukan.png" alt="Beruang berpelukan">
 
             <h1>hihi love u dedeekkk sayangg, jangann ngambekk2 lagii yaaa, nyikkk sayanggg dedeekk!</h1>
         </div>
